<resources>
    <string name="app_name" translatable="false">Kaccar 6.0</string>
    <string name="history">IP Finder</string>
    <string name="velocity">Velocity</string>
    <string name="IPConnect">IP Connector</string>
    <string name="controlling">Controlling</string>
    <string name="MaxVelocity">Max Velocity</string>
    <string name="LimitVelocity">Limit Velocity</string>
    <string name="ChangeControl">Change Control</string>
    <string name="Forward">Forward</string>
    <string name="Back">Back</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Stop" translatable="false">Stop</string>
    <string name="Settings">Settings</string>
    <string name="Accept">Accept</string>
    <string name="StandardRes" />
    <string name="StandardClick">One click</string>
    <string name="PressClick">Continiusly</string>
    <string name="InfoVelo">Your actual velocity:</string>
    <string name="SettingVelocity">Velocity "\n" setting</string>
    <string name="SettingClick">Move "\n" setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
