<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kacper.kaccar60.Settings">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/mIPConnector"
            android:layout_width="407dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:text="@string/IPConnect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/mVelocity"
            android:layout_width="353dp"
            android:layout_height="19dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="320dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mAccept" />

        <Switch
            android:id="@+id/mPressClick"
            android:layout_width="287dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:showText="true"
            android:text="@string/SettingClick"
            android:textOff="@string/StandardClick"
            android:textOn="@string/PressClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mIPConnector" />

        <Switch
            android:id="@+id/mVelocityClick"
            android:layout_width="286dp"
            android:layout_height="46dp"
            android:layout_above="@+id/mPressClick"
            android:layout_alignEnd="@+id/mPressClick"
            android:layout_marginBottom="33dp"
            android:showText="true"
            android:text="@string/SettingVelocity"
            android:textOff="@string/LimitVelocity"
            android:textOn="@string/MaxVelocity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPressClick" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
